<resources>
    <string name="app_name">Cooking Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_times">ShowTimes</string>
    <string name="admob_app_id">ca-app-pub-5961771507160254~8394869128</string>

    <!--......................................HOME SCREEN STRINGS..........................................................-->
    <string name="home_screen_new">Create New Meal</string>
    <string name="home_screen_load">Load Last Meal</string>
    <string name="no_upcoming_alarms">No Upcoming Reminders</string>
    <string name="title_activity_upcoming_alarms">Upcoming Reminders</string>
    <string name="hold_to_update">Long hold to edit items</string>
    <string name="upcoming_reminders">Upcoming Reminders</string>
    <string name="get_recent_timings">Show Recent Timings</string>
    <string name="upgrade_to_pro">Upgrade To Pro</string>
    <string name="show_saved_meals_menu_item">Show Saved Meals</string>
    <string name="load_saved_meal">Load Saved Meal</string>
    <string name="logo">Application logo</string>
    <string name="upgrade_to_unlock">Please upgrade to unlock this feature</string>
    <string name="error_iab">Error. Please Try again.</string>


    <!--......................................ADD ITEM SCREEN STRINGS........................................................-->
    <string name="item_screen_banner_ad">ca-app-pub-5961771507160254/5904314720</string>
    <string name="no_food_item_found">Please add at least one food item</string>
    <string name="no_previous_meal">No previous meal found</string>
    <string name="add_item">Add Item</string>
    <string name="add">Add Item</string>
    <string name="name_no_pipe">Name can\'t contain the pipe character \'|\'</string>
    <string name="no_name_time">Please enter a name and cooking time</string>
    <string name="food_not_ready_on_time">Food can\'t be ready at this time\nPlease select a different time/date</string>
    <string name="new_item_name">Item Name</string>
    <string name="new_item_prep_time">Preparation Time</string>
    <string name="new_item_cook_time">Cooking Time</string>
    <string name="cancel">Cancel</string>
    <string name="stage_name">Name (e.g. Prep/Cook)</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="add_stage">Add Stage</string>
    <string name="stages">Stages</string>
    <string name="drag_to_reorder">Double Tap To Reorder\nLong Hold To Edit Stages</string>
    <string name="lv_stage_name">Stage Name</string>
    <string name="lv_stage_no">Number</string>
    <string name="cont">Continue</string>
    <string name="reorder_handler">image to handle drag events to reorder list view items</string>
    <string name="add_cooking_times">Add Cooking Times</string>
    <string name="name">Name</string>
    <string name="total_time">Total Time</string>


    <!-- .................................CHOOSE READY TIME DIALOG STRINGS.................................................-->
    <string name="chooseReadyTimeTitle">Choose Meal Time</string>
    <string name="haveFoodReadyAt">Have Food\nReady At:</string>
    <string name="foodReadyAt">Food Will Be Ready At: </string>
    <string name="ASAP_time_select">As Soon As Possible</string>
    <string name="manual_time_select">Manually Choose a Time</string>
    <string name="reminders">Reminders</string>
    <string name="showTimings">Show Times</string>
    <string name="override_warning">Continuing will override previous meal timings\n(reminders unaffected)</string>

    <!--..........................................TIMINGS PAGE STRINGS.......................................................-->
    <string name="timing_screen_banner_ad">ca-app-pub-5961771507160254/7381047921</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5961771507160254/2000635521</string>
    <string name="minutes">mins</string>
    <string name="reminders_set">Reminders Set</string>
    <string name="save_meal">Save Meal</string>
    <string name="meal_notes_hint">Notes (e.g recipe book / oven temperature)</string>
    <string name="meal_name_hint">Meal Name</string>
    <string name="finished">Finished</string>
    <string name="food_ready_at">Food will be ready at</string>
    <string name="start_cooking_at">Start At:</string>
    <string name="what_to_cook">What To Do:</string>
    <string name="error_deleting_reminder">Error Deleting Reminder</string>
    <string name="reminder_deleted">Reminder Deleted</string>
    <string name="enter_meal_name">Please enter a name for the meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="edit_meal_msg">Editing the meal will delete any reminders associated with this meal</string>


    <!--............................................UPGRADE PAGE STRINGS........................................................-->
    <string name="title_activity_upgrade_screen">Upgrade To Ad Free</string>
    <string name="status">Current Status: </string>
    <string name="title_activity_saved_meals">SavedMeals</string>
    <string name="free"> FREE</string>
    <string name="upgraded"> UPGRADED</string>
    <string name="pro_benefits">Benefits of Pro:</string>
    <string name="benefits">- Save meals for repeated use\n- No adverts</string>


    <!--............................................SAVED MEALS PAGE.............................................................-->
    <string name="saved_meal_tile">Saved Meals</string>
    <string name="load_meal">Load/Edit Meal</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="no_meals_found">No Meals Found!</string>


</resources>