<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:gravity="center"
            android:id="@+id/stageNameET"
            android:maxLength="100"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/stage_name" />

        <EditText
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:id="@+id/stageTimeET"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/time" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:text="@string/cancel"
            android:id="@+id/cancelAddStage"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/delete"
            android:id="@+id/deleteStage"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/finishAddingStage"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/add_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>