<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">


    <EditText
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:id="@+id/newItemName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/new_item_name" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_red_dark" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stages"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_to_reorder"
        android:textSize="12sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/lv_stage_name"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_blue_light"/>

        <TextView
            android:text="@string/time"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"/>


    <ListView
        android:id="@+id/stagesListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">
    </ListView>


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/cancelAddingItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/addStageButton"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_stage"/>

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/addItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


</LinearLayout>