<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/chooseReadyTimeTitle"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/haveFoodReadyAt"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/ASAP_RB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ASAP_time_select"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/manualTimeSelectRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_time_select"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>

    <ScrollView
        android:id="@+id/manualTimeSelectSV"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/readyTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <DatePicker
                android:layout_marginTop="20dp"
                android:id="@+id/readyDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodReadyAt"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/readyTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:layout_gravity="center"
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reminders"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/getTimingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showTimings"
            android:layout_margin="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:text="@string/override_warning"/>
</LinearLayout>