<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_meal"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark" />

    <EditText
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:id="@+id/mealNameET"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/meal_name_hint"
        android:textSize="15sp"/>

    <EditText
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:id="@+id/mealNotesET"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/meal_notes_hint"
        android:textSize="12sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:textColor="@android:color/black"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:id="@+id/cancelSavingMealButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            />

        <Button
            android:textColor="@android:color/black"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:id="@+id/saveMealButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_meal"
            android:layout_margin="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            />

    </LinearLayout>


</LinearLayout>