<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".TimerScreen">

    <com.google.android.gms.ads.AdView
        android:id="@+id/itemScreenBannerAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/item_screen_banner_ad" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:text="Add Cooking Times" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:textStyle="italic"
                android:text="@string/hold_to_update"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_dark" />

        <LinearLayout
            android:weightSum="4"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp">

            <TextView
                android:layout_weight="2"
                android:text="Name"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/holo_green_light"/>

            <TextView
                android:layout_weight="1"
                android:text="Stages"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/holo_green_light"/>

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:text="Total Time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_green_light"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <ListView
                android:id="@+id/mealItemListView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <LinearLayout
                android:weightSum="3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    style="@style/Base.Widget.AppCompat.ButtonBar"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:onClick="addItem"
                    android:text="@string/add_item" />

                <Button
                    style="@style/Base.Widget.AppCompat.ButtonBar"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/save_meal"
                    android:onClick="saveMeal"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:layout_height="fill_parent" />

                <Button
                    style="@style/Base.Widget.AppCompat.ButtonBar"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:onClick="selectReadyTime"
                    android:text="@string/cont" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

